# hhack

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
llm-docs/: README.md  architecture.md  context.md  conventions.md  decisions.md  open-questions.md  roadmap.md
llm-docs/sessions/: 2026-05-26-job-page-jsonld.md  2026-05-26-kickoff.md  2026-05-26-phase-1-browser.md  2026-05-26-phase-2-1-serp.md  2026-05-26-phase-2-feed.md  2026-05-26-phase-3-1-resume-sync.md  2026-05-26-phase-3-matcher.md  2026-05-26-phase-4-letter.md
migrations/: env.py
migrations/versions/: 0_initial.py  1_match_results.py  2_widen_resume_id.py  3_applications.py
resumes/: README.md  example_a.md  example_b.md
src/hhack/: bootstrap.py  config.py
src/hhack/domain/: __init__.py  application.py  job.py  match.py
src/hhack/integrations/: anthropic_client.py
src/hhack/matching/: letter_prompts.py  letter_writer.py  matcher.py  prompts.py  resume.py
src/hhack/persistence/: __init__.py  application_repository.py  database.py  job_repository.py  match_repository.py
src/hhack/tools/: browser.py  letter_export.py  match_export.py
src/hhack/workers/: chat.py  feed.py
tests/integrations/: fakes.py  test_anthropic_client.py
tests/matching/: test_letter_prompts.py  test_letter_writer.py  test_matcher.py  test_prompts.py  test_resume.py
tests/persistence/: fakes.py  test_fake_application_repository.py  test_fake_job_repository.py  test_fake_match_repository.py
tests/workers/: test_feed_process_job.py
(+8 files in other folders)
