[project]
name = "hhack"
version = "0.1.0"
description = "Local browser-automation bot that applies to HeadHunter jobs and replies to recruiter bots."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.94.1",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "playwright>=1.50.0",
]

[project.scripts]
hhack-feed = "hhack.workers.feed:main"
hhack-chat = "hhack.workers.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hhack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"migrations/versions/*" = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
exclude = ["migrations/versions"]

[[tool.mypy.overrides]]
module = ["playwright.*", "playwright_stealth.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.13.5",
    "ruff>=0.7.0",
    "mypy>=1.10.0",
    "pre-commit>=4.0.0",
]
